implementar template para admin and user

--- a/src/main/resources/templates/administrador/templates_admin.html
+++ b/src/main/resources/templates/administrador/templates_admin.html
@@ -24,7 +24,10 @@
 							
 							<div class="dropdown-menu"
 								aria-labelledby="navbarDropdownMenuLink">
-								<a class="dropdown-item" th:href="@{/productos}">Productos</a> 
+								<a class="dropdown-item" th:href="@{/productos}">Productos</a>
+								<a class="dropdown-item" th:href="@{/}">Usuarios</a>
+								<a class="dropdown-item" th:href="@{/}">Ordenes</a>
+								<a class="dropdown-item" th:href="@{/}">Salir</a> 
 							</div></li>
 				</ul>
 			</div>
