--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -21,8 +21,10 @@
 
 <body>
 
-	<!-- Navigation -->
-	<div th:include="usuarios/template_usuario.html::header"></div>
+	 <!--Navigation -->
+	<div th:include="usuario/template_usuario.html::header" th:if="${sesion==null}"></div>
+	<div th:include="usuario/template_usuario.html::header-user" th:unless="${sesion==null}"></div>
+
 
 	<!-- Page Content -->
 	<div class="container">
@@ -36,14 +38,14 @@
 		<!-- Page Features -->
 		<div class="row text-center">
 
-			<div class="col-lg-3 col-md-6 mb-4" th:each="p: ${productos}">
+			<div class="col-lg-3 col-md-6 mb-4" th:each="producto: ${productos}">
 				<div class="card h-100">
-					<img class="card-img-top" th:src="@{/images/{img} (img=${p.imagen})}" alt="">
+					<img class="card-img-top" th:src="@{/images/{img} (img=${producto.imagen})}" alt="">
 					<div class="card-body">
-						<p class="card-text" th:text="${p.nombre}"></p>
+						<p class="card-text" th:text="${producto.nombre}"></p>
 					</div>
 					<div class="card-footer">
-						<a th:href="@{/productohome/{id} (id=${p.id})}" class="btn btn-success">Ver producto</a>
+						<a th:href="@{/productohome/{id} (id=${producto.id})}" class="btn btn-success">Ver producto</a>
 					</div>
 				</div>
 			</div>
@@ -55,7 +57,7 @@
 	<!-- /.container -->
 
 	<!-- Footer -->
-	<div th:include="usuarios/template_usuario.html::footer"></div>
+	<div th:include="usuario/template_usuario.html::footer"></div>
 
 	<!-- Bootstrap core JavaScript -->
 	<script th:src="@{vendor/jquery/jquery.min.js}"></script>
