--- a/src/main/resources/templates/administrador/templates_admin.html
+++ b/src/main/resources/templates/administrador/templates_admin.html
@@ -27,7 +27,7 @@
 								<a class="dropdown-item" th:href="@{/productos}">Productos</a>
 								<a class="dropdown-item" th:href="@{/}">Usuarios</a>
 								<a class="dropdown-item" th:href="@{/}">Ordenes</a>
-								<a class="dropdown-item" th:href="@{/}">Salir</a> 
+								<a class="dropdown-item" th:href="@{/usuario/cerrar}">Salir</a> 
 							</div></li>
 				</ul>
 			</div>
