--- a/src/main/resources/templates/administrador/detalleorden.html
+++ b/src/main/resources/templates/administrador/detalleorden.html
@@ -23,19 +23,19 @@
 
   <!-- Navigation -->
   <div th:include="administrador/templates_admin.html::header"></div>
-
     <!-- Page Content -->
     <div class="container">
 
 
       <!-- Page Heading/Breadcrumbs -->
       <h1 class="mt-4 mb-3">
-        Spring Marketplace <small>Ordenes de compra</small>
+        Spring Marketplace <small>Detalles</small>
       </h1>
 
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-        <li class="breadcrumb-item active">Ordenes de compra</li>
+        <li class="breadcrumb-item"><a th:href="@{/administrador}">Home</a></li>
+        <li class="breadcrumb-item"><a th:href="@{/administrador/ordenes}">Ordenes</a></li>
+        <li class="breadcrumb-item active">Detalle de orden</li>
       </ol>
 
       <!-- Blog Post -->
@@ -45,20 +45,20 @@
            <div class="col-lg-12">
             <table class="table">
               <thead>
-                <tr>
-                  <th scope="col">No. de Orden</th>
-                  <th scope="col">Fecha</th>
-                  <th scope="col">Valor</th>
-                  <th scope="col">Acción</th>
+                <tr th:each="detalle:${detalles}">
+                  <th scope="col" th:text="${detalle.cantidad}"></th>
+                  <th scope="col" th:text="${detalle.nombre}"></th>                  
+                  <th scope="col" th:text="${detalle.precio}"></th>
+                  <th scope="col" th:text="${detalle.total}"></th>                  
                 </tr>
               </thead>
               <tbody>
-                <tr th:each="orden:${ordenes}">
-                  <td th:text="${orden.numero}"></td>
-                  <td th:text="${orden.fechaCreacion}"></td>
-                  <td th:text="${orden.total}"></td>
-                  <td><a th:href="@{/administrador/detalle/{id} (id=${orden.id})}" class="btn btn-success">Ver Detalle</a></td>
-                </trth>
+                <tr>
+                  <td >Cantidad</td>
+                  <td >Producto</td>
+                  <td >Precio</td>
+                  <td >Total</td>
+                </tr>
               </tbody>
             </table>
           </div>
@@ -78,3 +78,4 @@
 </body>
 
 </html>
+
