--- a/src/main/resources/templates/administrador/home.html
+++ b/src/main/resources/templates/administrador/home.html
@@ -43,7 +43,7 @@
               <p class="card-text"th:text="${producto.nombre}"></p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-success">Ver producto</a>
+              <a th:href="@{/administrador/productohomeadmin/{id} (id=${producto.id})}" class="btn btn-success">Ver producto</a>
             </div>
           </div>
         </div>
