--- a/src/main/resources/templates/usuario/detallecompra.html
+++ b/src/main/resources/templates/usuario/detallecompra.html
@@ -31,11 +31,11 @@
 
 		<!-- Page Heading/Breadcrumbs -->
 		<h1 class="mt-4 mb-3">
-			Spring eCommerce <small>Detalles</small>
+			Spring Marketplace <small>Detalles</small>
 		</h1>
 
 		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a t:href="@{/}">Home</a></li>
+			<li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
 			<li class="breadcrumb-item"><a th:href="@{/usuario/compras}">Compras</a></li>
 			<li class="breadcrumb-item active">Detalle de Compra</li>
 		</ol>
